Small page content modifications
Catalyst:
https://github.com/iLeonidze/Luna/issues/8

Changes:
Contents now added by template
Added author meta tag
Updated robots support

Impacts:
Contents now should be used from template from `['contents']['body']` instead of `['content']`

--- a/storage/configuration.json
+++ b/storage/configuration.json
@@ -21,9 +21,8 @@
     "copyright":"Leonid Fedotov",
     "index":true
   },
-  "template":{
-    "header":"header.php",
-    "footer":"footer.php",
+  "workspace":{
+    "template":"demo_template.php",
     "admin":"admin.php"
   },
   "beatify":{
