Page object appeared! Everything now pretty simple: use any methods of $page. Nothing else required.
Catalyst:
TODO page fluid interface
TODO cache

Changes:
Added implicit cache (now disabled)
Added Page class
Page can be loaded using URL or ID
Page automatically validates
Page methods avoid errors

Impacts:
Template, core, pages, configuration

--- a/.htaccess
+++ b/.htaccess
@@ -7,7 +7,7 @@ AddDefaultCharset UTF-8
     RewriteRule ^index\.php$ - [L]
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule . /index.php [L]
+    RewriteRule . /cache.php [L]
 </IfModule>
 
 AddOutputFilterByType DEFLATE text/html
