--- a/storage/configuration.json
+++ b/storage/configuration.json
@@ -7,7 +7,14 @@
     "host":"luna.com",
     "name":"Luna demo site",
     "description":"Simple & powerful CMS",
-    "delimiter":" / "
+    "delimiter":" / ",
+    "meta":{
+      "robots":true,
+      "seo":true,
+      "og":true,
+      "twitter":true,
+      "schema":true
+    }
   },
   "additional":{
     "favicon_path":"assets/favicon.ico",
@@ -19,7 +26,9 @@
       "user_scalable":"no"
     },
     "copyright":"Leonid Fedotov",
-    "index":true
+    "index":true,
+    "fbid":9869919170,
+    "twitterid":"lunacms"
   },
   "workspace":{
     "template":"demo_template.php",
@@ -31,7 +40,7 @@
   },
   "log":{
     "enabled":true,
-    "level":0,
+    "level":1,
     "size":10240,
     "location":"storage/log.txt",
     "statistics":true
@@ -47,7 +56,8 @@
     {
       "urls":[
         "demo",
-        "hello/demo"
+        "hello/demo",
+        "demo/hello"
       ],
       "id":14983915899440,
       "hidden":false,
