Search interface appeared! You can find any information you want using new Search().
It is pre-release version of Search interface - it is only for testing purposes, it is do not have real pages search, only index.

Here what we can do:
This search is similar to native language. Just simply write something like that:
$search = new Search();
$pages = $search->from(0)->to(25)->byType("tshirt")->where("main","size")->isEqualTo("M")->find();
And that's it! You will get maximum 25 "tshirts" pages only with "M" "size".

Or, for example you want to get full pages URL-index. No problem, use this:
$search = new Search();
$pages = $search->findAsList();

--- a/storage/configuration.json
+++ b/storage/configuration.json
@@ -40,19 +40,12 @@
   },
   "log":{
     "enabled":true,
-    "level":1,
+    "level":0,
     "size":10240,
     "location":"storage/log.txt",
     "statistics":true
   },
   "index":[
-    {
-      "urls":[
-        "luna/api"
-      ],
-      "id":1,
-      "hidden":true
-    },
     {
       "urls":[
         "demo",
@@ -77,10 +70,37 @@
       ],
       "id":1234567890,
       "redirect":"hello/demo",
-      "type":"good"
+      "type":"test"
     }
   ],
   "navigation":[
-
+    {
+      "name":"Главная страница",
+      "link":"demo",
+      "children":[
+        {
+          "name":"Субэлемент",
+          "link":"hello/demo"
+        },
+        {
+          "name":"Еще один элемент",
+          "link":"hello/demo"
+        }
+      ]
+    },
+    {
+      "name":"Очередной пункт",
+      "link":"hello/demo",
+      "children":[
+        {
+          "name":"Рекурсия!",
+          "link":"1"
+        },
+        {
+          "name":"Цикл!",
+          "link":"2"
+        }
+      ]
+    }
   ]
 }
