Search interface extended! You can make more universal and elastic searches.
New features:
- You can build hierarchies with all found data and their parents. Find, then build hierarchy. For example:
$s = new Search();
$s
  ->byType("good")->find()
  ->asHierarchyWithParents()
  ->get();

- Make multiple search queries in one and glue results as common. For example:
$s = new Search();
$s
  ->byType("good")->from(0)->to(1)->find()
  ->byType("main")->from(3)->to(7)->find()
  ->get();

TODO:
Sort results.

Impacts:
You have to make search like this way ...->find()->get() instead of ->find() as it was like.

--- a/storage/configuration.json
+++ b/storage/configuration.json
@@ -62,7 +62,7 @@
       ],
       "id":14983915905589,
       "hidden":false,
-      "type":"main"
+      "type":"good"
     },
     {
       "urls":[
@@ -70,7 +70,7 @@
       ],
       "id":1234567890,
       "redirect":"hello/demo",
-      "type":"test"
+      "type":"main"
     }
   ],
   "navigation":[
